# timeseries_models

./: .gitattributes  .gitignore  README.md  pyproject.toml
configs/: arima.yaml  base.yaml  features.yaml  grid_lstm_h30_arch.json  grid_lstm_h30_phase2.json  grid_lstm_h30_phase4.json  grid_lstm_h30_phase5.json  grid_lstm_h30_phase6.json  grid_lstm_h30_phase7.json  grid_lstm_phase1.json  grid_lstm_phase2.json  grid_lstm_seqlen_multioutput.json  grid_lstm_seqlen_recursive.json  lstm.yaml  prophet.yaml  prophet_tune_grid.yaml  rnn.yaml  sarimax.yaml  xgboost.yaml
data/cleaned/: store_cleaned.csv  test_cleaned.csv  train_cleaned.csv
notebooks/: 01_eda.ipynb  02_comparison.ipynb  arima_try.R  exploratory-analysis-rossmann.Rmd  predicting-sales-time-series-analysis-forecasting.ipynb  rossmann-store-sales-prediction-top-100-solution.ipynb  sunlightsedu-rossmann.ipynb  template_experiment.ipynb  time_series_linear_models_tslm.R  xgb_rossmann.R  xgboost_in_python_with_rmspe_v2.py
scripts/: ablation_study.py  analyze_series.py  analyze_store_variance.py  clean_data.py  compare.py  compare_30day.py  compare_cv.py  evaluate.py  grid_search_xgboost.py  interactive_train_helpers.py  plot_grid_results.py  randomized_search_xgboost.py  regen_actual_vs_forecast.py  regen_error_comparison.py  train.py  tune-prophet-ablation.py  tune-prophet-coarse.py  tune-prophet-fine.py  tune_arima_discovery.py  tune_arima_grid.py  tune_sarimax_ablation.py  tune_sarimax_discovery.py  tune_sarimax_grid.py
scripts/figures/: fig_22_eda.py  (+18 more)
tests/: test_cleaner.py  test_config.py  test_metrics.py
(+26 files in other folders)
