[project]
name = "timeseries-models"
version = "0.1.0"
description = "Comparative framework for time series forecasting models on Rossmann Store Sales"
requires-python = ">=3.11"
dependencies = [
    "pandas>=2.0",
    "numpy>=1.24",
    "scikit-learn>=1.3",
    "statsmodels>=0.14",
    "pmdarima>=2.0",
    "prophet>=1.1",
    "xgboost>=2.0",
    "torch>=2.0",
    "matplotlib>=3.7",
    "seaborn>=0.12",
    "pyyaml>=6.0",
    "typer>=0.9",
    "rich>=13.0",
    "jupyter>=1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "ruff>=0.1",
]

[project.scripts]
ts-train = "scripts.train:app"
ts-evaluate = "scripts.evaluate:app"
ts-compare = "scripts.compare:app"

[tool.ruff]
line-length = 120
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "W"]
ignore = ["E501"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]

[tool.hatch.build.targets.wheel]
packages = ["src", "scripts"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
